fix-overflow

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ span:nth-child(10) {
 
   body {
     background-size: cover;
+    overflow: auto;
   }
   .message {
     font-size: 28px;
